Layout WIP Still need to fix QR / footer overlap on mobile

--- a/shuz-app/styles/globals.css
+++ b/shuz-app/styles/globals.css
@@ -1,3 +1,8 @@
 .mode-selector {
   --switch-background-color: var(--switch-checked-background-color);
 }
+
+main {
+  min-height: 95vh;
+  max-height: 95vh;
+}
